--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html>
-	<head lang="en">
-		<meta charset="utf-8">
-		<title>Projeto Computação Grafica</title>
-		<style>
-			body { margin: 0; }
-		</style>
-		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+<html lang="en">
+  <head>
+    <title>three.js vr projeto</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link type="text/css" rel="stylesheet" href="main.css">
+    <script src="https://unpkg.com/three@v0.152.2/examples/jsm/libs/ammo.wasm.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
-		<script type="importmap">
-		  {
-		    "imports": {
-		      "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
-		      "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/"
-		    }
-		  }
-		</script>
-	</head>
-	<body>
-		<script type="module" src="/main.js"></script>
-	</body>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@v0.152.2/examples/jsm/"
+        }
+      }
+    </script>
+  </head>
+  <body>
+    <div id="info">
+      <a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> vr projeto<br/>(Chrome Android 81+)
+    </div>
+
+    <div id="container"></div>
+
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
